# insight-engine

./: check_live_narration.py  check_load.py  main.py  pyproject.toml  rules.yaml
.github/workflows/: ci.yml
src/: load.py  metrics.py  narrate.py  report.py  rules.py  run.py  schema.py
synthetic_data/: ANSWER_KEY.md  customers.csv  generate_data.py  invoices.csv  jobs.csv  quotes.csv  technicians.csv  time_entries.csv
templates/: report.html
tests/: test_metrics.py  test_narrate.py  test_report.py  test_rules.py  test_run.py
